[package]
name = "fast_kv"
version = "0.1.0"
edition = "2024"
description = "High-performance, Redis-compatible key-value store"
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "macros", "sync"] }
bincode = "1.3"
memmap2 = "0.9"
zerocopy = { version = "0.8", optional = true }
tokio-uring = { version = "0.5", optional = true }

[dev-dependencies]
criterion = "0.5"
redis = "0.24"

[[bench]]
name = "kv_benchmark"
harness = false

[[bench]]
name = "network_benchmark"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0

[features]
default = []
zero-copy = ["zerocopy"]
io-uring = ["tokio-uring"]