[package]
name = "fast_kv"
version = "1.2.1"
edition = "2024"
description = "High-performance, Redis-compatible key-value store with WAL persistence, TTL expiration, and lock-free concurrency"
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "macros", "sync", "signal", "time"] }
zerocopy = { version = "0.8", optional = true }
tokio-uring = { version = "0.5", optional = true }
crc32c = "0.6"
zstd = { version = "0.13", optional = true }

[dev-dependencies]
criterion = "0.5"
tempfile = "3"

[[bench]]
name = "kv_benchmark"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0

[features]
default = []
zero-copy = ["zerocopy"]
io-uring = ["tokio-uring"]
blob-store = ["zstd"]
similarity = []
